Set body overflow hidden as a quick fix for something (not visible) extending over to the right

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,10 @@
     font-size: 16px;
 }
 
+body{
+    overflow: hidden;
+}
+
 .hidden{
     display: none;
 }
